Fix alignment and overflow of new note

--- a/app/assets/stylesheets/components/notes/new_note.scss
+++ b/app/assets/stylesheets/components/notes/new_note.scss
@@ -44,21 +44,25 @@ button#new-cancel {
 }
 
 .new-note form {
-  height: 100%;
+  height: 87.5%;
   width: auto;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
 
   margin-top: 10px;
   margin-right: 160px;
+
+  border: 1px solid red;
 }
 
 #new-title {
   font-size: 28px;
   height: 35px;
   border: none;
-  color: $note-title
+  color: $note-title;
+
+  border: 1px solid blue;
 }
 
 #new-title::placeholder {
