--- a/app/assets/stylesheets/components/notes/rich_text_editor.scss
+++ b/app/assets/stylesheets/components/notes/rich_text_editor.scss
@@ -1,6 +1,11 @@
 .RichEditor-root .RichEditor-editor .DraftEditor-root .DraftEditor-editorContainer {
   height: 100%;
   width: 100%;
+  overflow-y: scroll;
+}
+
+.RichEditor-editor {
+  padding: 10px;
 }
 
 .richtext-toolbar {
